Restore See Invisible and Insulation spells
We didn't really think much of the rationale for removal. Resistance
potions are in very short supply (re rElec), lacking rElec can be
exceptionally deadly (as can unseen horrors), and level 4 spells are
not exactly a trivial investment.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -39,6 +39,7 @@ Vanilla changes messed around with
 * The "corpse sense" given to necromancers is also given to Yred worshippers.
 * Sludge elves return, having been so keen to get back in the game as to be
   randomly selectable without us actually putting them back in.
+* See Invisible and Insulation spells return.
 
 Changes swiped from other variants
 ----------------------------------
