--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -40,6 +40,7 @@ Vanilla changes messed around with
 * Sludge elves return, having been so keen to get back in the game as to be
   randomly selectable without us actually putting them back in.
 * See Invisible and Insulation spells return.
+* Goliath beetles return.
 
 Changes swiped from other variants
 ----------------------------------
