Veh gifts do not expire
It's annoying and it's not clear to me what porpoise it serves.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -12,6 +12,7 @@ Stoat Soup 0.23 "The Masque of the Red Death"
   would sell other non-magical consumables if we thought of any.
 * Chei's assessment of the speed delta for piety and slouch is based purely
   on movement speed; no piety for Roxanne or oklobs, sorry.
+* Vehumet gifts do not expire.
 
 Vanilla changes messed around with
 ----------------------------------
