Flaming corpses return
Effectively reverts 26c693a4800d2c01efe070374f53abfae6e73675.

Could do with a quote to express how |m| they are.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -41,7 +41,8 @@ Vanilla changes messed around with
 * Sludge elves return, having been so keen to get back in the game as to be
   randomly selectable without us actually putting them back in.
 * See Invisible and Insulation spells return.
-* Goliath beetles, griffons, vipers, brain worms, clay golems, and Maud return.
+* Goliath beetles, griffons, vipers, brain worms, clay golems, flaming corpses,
+  and Maud return.
 
 Changes swiped from other variants
 ----------------------------------
