Revert "Give swamp worms Harpoon Shot and further adjustments"
This reverts commit 763bf80763e1eb239e1af1e042fe8e62e6fb7a45.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -43,6 +43,7 @@ Vanilla changes messed around with
 * See Invisible and Insulation spells return.
 * Goliath beetles, griffons, vipers, brain worms, clay golems, flaming corpses,
   and Maud return.
+* Swamp worms go back to being submerged ambush predators.
 
 Changes swiped from other variants
 ----------------------------------
