--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -42,7 +42,7 @@ Vanilla changes messed around with
   randomly selectable without us actually putting them back in.
 * See Invisible and Insulation spells return.
 * Goliath beetles, griffons, vipers, brain worms, clay golems, flaming corpses,
-  and Maud return.
+  rotting hulks, and Maud return.
 * Swamp worms go back to being submerged ambush predators.
 
 Changes swiped from other variants
